<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <!-- 积分榜 -->

    <LinearLayout
            android:layout_width="match_parent" android:layout_height="@dimen/title_head_height"
            android:orientation="horizontal"
            android:background="@drawable/title_vs">
        <TextView android:text="@string/title_ranking" style="@style/team_title" android:layout_weight="0.9"/>
        <include  layout="@layout/public_divider_view"/>
        <TextView android:text="@string/title_team" style="@style/team_title" android:layout_weight="1.8"/>
        <include  layout="@layout/public_divider_view"/>
        <TextView android:text="@string/title_ronda" style="@style/team_title"/>
        <include  layout="@layout/public_divider_view"/>
        <TextView android:text="@string/title_win" style="@style/team_title"/>
        <include  layout="@layout/public_divider_view"/>
        <TextView android:text="@string/title_flat" style="@style/team_title"/>
        <include  layout="@layout/public_divider_view"/>
        <TextView android:text="@string/title_defeat" style="@style/team_title"/>
        <include  layout="@layout/public_divider_view"/>
        <TextView android:text="@string/title_jinshiqiu" style="@style/team_title" android:layout_weight="1.6"/>
        <include  layout="@layout/public_divider_view"/>
        <TextView android:text="@string/title_integral" style="@style/team_title"/>
    </LinearLayout>
    <include layout="@layout/public_listview_n" />
</LinearLayout>