<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <LinearLayout android:layout_width="match_parent"  android:orientation="horizontal"
                    android:background="@drawable/title_m_s"
                    android:layout_height="@dimen/title_head_height">
        <TextView  android:text="@string/title_play_list"  android:layout_centerVertical="true"
                   android:textSize="@dimen/font_size_16" android:layout_gravity="center_vertical"
                   android:textColor="@android:color/white"
                   android:layout_width="wrap_content" android:layout_height="wrap_content"/>
        <TextView android:id="@id/tv_type"
                  android:layout_gravity="center_vertical"
                  android:layout_marginLeft="10dp"
                android:textColor="@android:color/white" android:textSize="@dimen/font_size_13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent" android:layout_height="@dimen/title_head_height"
                  android:orientation="horizontal"
                  android:background="@drawable/schedule_title_bg">
        <TextView android:text="@string/title_number" style="@style/schedule_title"  />
        <include layout="@layout/public_divider_view" />
        <TextView android:text="@string/title_name"   style="@style/schedule_title" />
        <include layout="@layout/public_divider_view" />
        <TextView android:text="@string/title_number_of_appearances"   style="@style/schedule_title"  android:layout_weight="1.2" />
        <include layout="@layout/public_divider_view" />
        <TextView android:text="@string/title_year_of_validity"   style="@style/schedule_title"   android:layout_weight="1.6"/>
        <include layout="@layout/public_divider_view" />
        <TextView android:text="@string/title_average_exit"    style="@style/schedule_title"   android:layout_weight="1.6"/>
    </LinearLayout>
    <include  layout="@layout/public_listview_n"/>
</LinearLayout>