<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <!-- 俱乐部-->
    <include layout="@layout/title"/>
    <FrameLayout android:id="@id/fl_m_content" android:layout_width="match_parent" android:layout_height="0px" android:layout_weight="1">
    </FrameLayout>
    <RadioGroup android:id="@id/rg_group_m"
                android:layout_width="match_parent"
                android:layout_height="@dimen/app_title_height"
                android:divider="@android:color/white"
                android:background="@drawable/title_bg"
                android:orientation="horizontal" android:scrollbars="none">
        <RadioButton android:id="@id/rbtn_left_menu_0"  style="@style/rb_choose_tab" android:text="@string/title_description"
                     android:drawableTop="@drawable/s_club_introduction"      />
        <RadioButton android:id="@id/rbtn_left_menu_1"  style="@style/rb_choose_tab" android:text="@string/title_team_history"
                     android:drawableTop="@drawable/s_club_team_history"/>
        <RadioButton android:id="@id/rbtn_left_menu_2"  style="@style/rb_choose_tab" android:text="@string/title_the_team_culture"
                     android:drawableTop="@drawable/s_club_team_culture"       />
        <RadioButton android:id="@id/rbtn_left_menu_3"  style="@style/rb_choose_tab" android:text="@string/title_compete_for_the_base"
                     android:drawableTop="@drawable/s_club_socerbase"  />
        <RadioButton android:id="@id/rbtn_left_menu_4"  style="@style/rb_choose_tab" android:text="@string/title_business"
                     android:drawableTop="@drawable/s_club_business"  />
    </RadioGroup>

</LinearLayout>