<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <TextView android:layout_width="match_parent"
              android:gravity="center"
              android:textSize="50px"
              android:background="@color/left_menu_bg0"
              android:layout_height="@dimen/app_title_height"
              android:textColor="@android:color/white"
              android:text="@string/app_title_name"/>
    <!-- 左边菜单 -->
    <RadioGroup android:id="@id/rg_group"
                android:layout_width="match_parent" android:layout_height="match_parent"
                android:showDividers="middle"
                android:background="@drawable/left_menu"
                android:dividerPadding="10px"
                android:orientation="vertical" android:scrollbars="none">
       <!-- <RadioButton android:id="@id/rbtn_left_menu_0"  style="@style/left_menu_item" android:text="@string/left_menu_1"/>
        <View android:layout_width="fill_parent" android:layout_height="1px" android:background="@drawable/shadow_divider" />-->
        <RadioButton android:id="@id/rbtn_left_menu_1"  style="@style/left_menu_item" android:text="@string/left_menu_2"/>
        <View android:layout_width="fill_parent" android:layout_height="1px" android:background="@drawable/shadow_divider" />
        <RadioButton android:id="@id/rbtn_left_menu_2"  style="@style/left_menu_item" android:text="@string/left_menu_3"/>
        <View android:layout_width="fill_parent" android:layout_height="1px" android:background="@drawable/shadow_divider" />
        <RadioButton android:id="@id/rbtn_left_menu_3"  style="@style/left_menu_item" android:text="@string/left_menu_4"/>
        <View android:layout_width="fill_parent" android:layout_height="1px" android:background="@drawable/shadow_divider" />
        <RadioButton android:id="@id/rbtn_left_menu_4"  style="@style/left_menu_item" android:text="@string/left_menu_5"/>
        <View android:layout_width="fill_parent" android:layout_height="1px" android:background="@drawable/shadow_divider" />
    </RadioGroup>
</LinearLayout>