<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
              android:orientation="vertical"
              android:layout_height="match_parent">
    <!-- 一线阵容-->
    <include layout="@layout/title"/>
    <FrameLayout android:id="@id/fl_m_content" android:layout_width="match_parent" android:layout_height="0px" android:layout_weight="1">
    </FrameLayout>
    <RadioGroup android:id="@id/rg_group_m"
                android:layout_width="match_parent"
                android:layout_height="@dimen/app_title_height"
                android:divider="@android:color/white"
                android:background="@drawable/title_bg"
                android:orientation="horizontal" android:scrollbars="none">
        <RadioButton android:id="@id/rbtn_left_menu_0"  style="@style/rb_choose_tab" android:text="@string/title_a_team"
                     android:drawableTop="@drawable/s_team_a"      />
        <RadioButton android:id="@id/rbtn_left_menu_1"  style="@style/rb_choose_tab" android:text="@string/title_reserves"
                     android:drawableTop="@drawable/s_team_reserves"      />
        <RadioButton android:id="@id/rbtn_left_menu_2"  style="@style/rb_choose_tab" android:text="@string/title_coaching"
                     android:drawableTop="@drawable/s_team_coaching"       />
        <RadioButton android:id="@id/rbtn_left_menu_3"  style="@style/rb_choose_tab" android:text="@string/title_player_ranking"
                     android:drawableTop="@drawable/s_team_player_ranking"  />
    </RadioGroup>
</LinearLayout>