<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
              android:orientation="vertical"
              android:layout_height="match_parent">
    <!-- 一线阵容-->
    <!-- 左边菜单 -->
    <RadioGroup android:id="@id/rg_group"
                android:layout_width="match_parent" android:layout_height="@dimen/title_team_head_height"
                android:background="@drawable/lunbo_one"
                android:padding="20px"
                android:paddingLeft="10px"
                android:paddingRight="10px"
                android:orientation="horizontal" android:scrollbars="none">
        <RadioButton android:id="@id/rbtn_left_menu_0"  style="@style/rb_a_team" android:text="@string/title_card" />
        <RadioButton android:id="@id/rbtn_left_menu_1"  style="@style/rb_a_team" android:text="@string/title_forward"/>
        <RadioButton android:id="@id/rbtn_left_menu_2"  style="@style/rb_a_team" android:text="@string/title_midfield"/>
        <RadioButton android:id="@id/rbtn_left_menu_3"  style="@style/rb_a_team" android:text="@string/title_guard"/>
        <RadioButton android:id="@id/rbtn_left_menu_4"  style="@style/rb_a_team" android:text="@string/title_cesar"/>
    </RadioGroup>
    <LinearLayout android:layout_width="match_parent" android:layout_height="@dimen/title_head_height"
                android:orientation="horizontal"
                android:background="@drawable/shen_bg">
        <TextView android:id="@id/tv_team_year" android:text="2014"  style="@style/team_title"  android:textColor="@color/team_title_fc"/>
        <TextView android:id="@id/tv_team_name0"  android:text="上海申鑫"  style="@style/team_title" />
        <TextView android:id="@id/tv_team_score"  android:text="0-0"   style="@style/team_title" />
        <TextView android:id="@id/tv_team_name1"  android:text="杭州绿城"  style="@style/team_title" />
        <TextView android:id="@id/tv_team_round" android:text="第11轮"   style="@style/team_title"  android:textColor="@color/team_title_fc"/>
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent" android:layout_height="0px" android:layout_weight="1" android:background="@drawable/team_bg">

    </LinearLayout>
    <LinearLayout android:layout_width="match_parent" android:layout_height="0px" android:layout_weight="1" android:background="@drawable/shen_bg">

    </LinearLayout>
</LinearLayout>